--- a/locale/en.json
+++ b/locale/en.json
@@ -1,40 +1,40 @@
 {
 	"metadata": {
-		"title": "Sa7a Box — Premium High-Protein Meals for Athletes & Hustlers",
-		"description": "Premium high-protein meals designed for athletes and hustlers. Gym pickup and fast delivery across Tunisia. Fuel your body with Sa7a Box.",
-		"ogTitle": "Sa7a Box — Premium High-Protein Meals",
-		"ogDescription": "Fuel your hustle with premium high-protein meals. Gym pickup & fast delivery across Tunisia.",
-		"twitterTitle": "Sa7a Box — Fuel Your Hustle",
-		"twitterDescription": "Premium high-protein meals for athletes. Gym pickup & fast delivery across Tunisia."
+		"title": "Sa7a Box — Premium Protein Meals for Athletes and Entrepreneurs",
+		"description": "Premium protein meals designed for athletes and entrepreneurs. In-gym pickup and fast delivery across Tunisia. Boost your body with Sa7a Box.",
+		"ogTitle": "Sa7a Box — Premium Protein Meals",
+		"ogDescription": "Boost your daily life with premium protein meals. In-gym pickup and fast delivery across Tunisia.",
+		"twitterTitle": "Sa7a Box — Boost Your Daily Life",
+		"twitterDescription": "Premium protein meals for athletes. In-gym pickup and fast delivery across Tunisia."
 	},
 	"brand": {
 		"name": "Sa7a Box",
-		"tagline": "Fuel Your Hustle",
-		"description": "Premium high-protein meals designed for performance."
+		"tagline": "Boost Your Daily Life",
+		"description": "Premium protein meals designed for performance."
 	},
 	"header": {
 		"order": "Order"
 	},
 	"hero": {
 		"category": "PREMIUM NUTRITION",
-		"headlinePart1": "Koul Mlih,",
-		"headlinePart2": "Trena Mlih.",
-		"description": "Authentic, high-protein meals to fuel your Tunisian hustle.",
+		"headlinePart1": "Eat Well,",
+		"headlinePart2": "Train Well.",
+		"description": "Authentic protein-rich meals to boost your daily life in Tunisia.",
 		"orderNow": "Order Now",
 		"findUs": "Find Us",
 		"features": {
-			"gymPickup": "Gym Pickup",
+			"gymPickup": "In-Gym Pickup",
 			"freshDaily": "Fresh Daily",
 			"delivery": "Delivery"
 		}
 	},
 	"menu": {
-		"title": "Our Fuel Selection",
+		"title": "Our Nutritional Selection",
 		"subtitle": "Designed for performance.",
 		"categories": {
-			"powerBoxes": "Power Boxes",
-			"greenFresh": "Green & Fresh",
-			"proteinDesserts": "Protein Desserts",
+			"powerBoxes": "Power Plat",
+			"healthySweet": "Healthy Sweet",
+			"healthyJuice": "Healthy Juice",
 			"box": "Box",
 			"salad": "Salad",
 			"side": "Side",
@@ -53,23 +53,77 @@
 		"items": {
 			"supercut": {
 				"name": "Supercut",
-				"description": "Lean chicken breast, quinoa, steamed veggies."
+				"description": "Lean chicken breast, quinoa, steamed vegetables."
 			},
-			 "superbalance": {
-        		"name": "SUPERBALANCE",
-        		"description": "Balanced meal to maintain your weight - 903 kcal, 81g protein"
-      		},
-      		"superbulk": {
-  				"name": "Superbulk",
-  				"description": "High-calorie meal for optimal mass gain - 1187 kcal, 82g protein"
+			"superbalance": {
+				"name": "Superbalance",
+				"description": "Balanced meal to maintain your weight - 903 kcal, 81g protein"
 			},
 			"carthageCaesar": {
-  				"name": "Carthage Caesar",
-  				"description": "High-protein Caesar salad 295 kcal, 46g protein"
+				"name": "Caesar Salad",
+				"description": "Protein-rich Caesar salad 295 kcal, 46g protein."
+			},
+			"superbulk": {
+				"name": "Superbulk",
+				"description": "High-calorie meal for optimal mass gain - 1187 kcal, 82g protein"
+			},
+			"supercutcrevette": {
+				"name": "Super Cut Shrimp",
+				"description": "Lean shrimp box designed for fat loss and muscle definition."
+			},
+			"healthyNuggets": {
+				"name": "Healthy Nuggets",
+				"description": "Healthy nuggets with your favorite bases for a nutritious and tasty meal."
+			},
+			"superbalancecrevette": {
+				"name": "Super Balance Shrimp",
+				"description": "Perfectly balanced shrimp meal for daily performance and energy."
+			},
+			"superbulkcrevette": {
+				"name": "Super Bulk Shrimp",
+				"description": "High-calorie shrimp box designed for significant mass and strength gains."
+			},
+			"mlewiHealthy": {
+				"name": "mlewi Healthy",
+				"description": "High-calorie shrimp box designed for significant mass and strength gains."
+			},
+			"healthyTiramisu": {
+				"name": "Healthy Tiramisu",
+				"description": "371 kcal, 26g protein, 24g carbs, 19g fat"
+			},
+			"trompeLOeilCoco": {
+				"name": "Coconut Trompe-l'œil",
+				"description": "452 kcal, 18g protein, 22g carbs, 32g fat"
+			},
+			"mousseChocoCarotte": {
+				"name": "Chocolate Carrot Mousse",
+				"description": "448 kcal, 23g protein, 26g carbs, 28g fat"
+			},
+			"cheesecakeHealthy": {
+				"name": "Healthy Cheesecake",
+				"description": "488 kcal, 22g protein, 37g carbs, 28g fat"
+			},
+			"pumpkinCake": {
+				"name": "Pumpkin Cake",
+				"description": "406 kcal, 28g protein, 33g carbs, 18g fat"
+			},
+			"Smoothie": {
+				"name": "Jus d’orange frais",
+				"description": "Jus d’orange 100 % frais pressé à froid."
+			},
+			"orangeJuice": {
+				"name": "Jus d’orange protéiné",
+				"description": "Jus d’orange naturel enrichi en protéines."
+			},
+			"bananaJuice": {
+				"name": "Smoothie protéiné à la banane",
+				"description": "Banane mixée avec des protéines pour une énergie saine."
+			},
+			"Yogurt": {
+				"name": "Yaourt protéiné à la banane",
+				"description": "Yaourt crémeux à la banane enrichi en protéines."
 			}
-
-
-    	},
+		},
 		"nutrition": {
 			"calories": "Cal",
 			"protein": "Protein",
@@ -79,7 +133,7 @@
 		},
 		"customize": {
 			"extras": "Add Extras",
-			"sauce": "Choose Sauce",
+			"sauce": "Choose a Sauce",
 			"notes": "Special Instructions",
 			"notesPlaceholder": "Any special requests?"
 		},
@@ -88,29 +142,29 @@
 		"addToCart": "Add to Order",
 		"cart": {
 			"title": "Your Order",
-			"description": "Review and edit your items",
+			"description": "Review and modify your items",
 			"subtotal": "Subtotal",
 			"item": "item",
 			"items": "items",
 			"sauce": "Sauce",
 			"extras": "Extras",
-			"remove": "Remove item",
+			"remove": "Remove",
 			"continueBrowsing": "Continue",
 			"checkout": "Checkout",
 			"review": "Review Order",
 			"empty": {
-				"title": "Your order is empty",
-				"description": "Add items from the menu to get started",
+				"title": "Your cart is empty",
+				"description": "Add items from the menu to start",
 				"action": "Browse Menu"
 			}
 		},
 		"checkout": {
-			"comingSoon": "Checkout coming soon!"
+			"comingSoon": "Payment coming soon!"
 		}
 	},
 	"builder": {
 		"title": "Build Your Meal",
-		"subtitle": "Pick ingredients, customize quantities, see your macros instantly.",
+		"subtitle": "Choose your ingredients, adjust portions, and see macros instantly.",
 		"categories": {
 			"base": "Base",
 			"protein": "Proteins",
@@ -125,12 +179,12 @@
 		},
 		"customPlate": {
 			"name": "Custom Plate",
-			"description": "Your custom-built meal"
+			"description": "Your personalized meal"
 		},
 		"addToOrder": "Add Plate to Order",
 		"empty": {
-			"title": "Start Building",
-			"description": "Select ingredients to build your custom plate."
+			"title": "Start building",
+			"description": "Select ingredients to create your custom plate."
 		},
 		"steps": {
 			"meal": "Meal",
@@ -138,44 +192,52 @@
 		},
 		"callout": {
 			"title": "Build Your Meal",
-			"description": "Customize your nutrition exactly how you want it. Choose your base, adjust macros, and create the perfect meal for your goals.",
+			"description": "Customize your nutrition exactly how you want. Choose your base, adjust macros, and create the perfect meal for your goals.",
 			"feature1": "Custom Macros",
-			"feature2": "Real-time Pricing",
+			"feature2": "Real-Time Pricing",
 			"feature3": "Perfect Portions",
 			"cta": "Start Building"
 		},
-		"selectMeal": "Select Your Base Meal",
+		"selectMeal": "Select your base",
 		"size": "Size",
-		"spicyLevel": "Spicy Level",
+		"spicyLevel": "Spice Level",
 		"noOnions": "No Onions",
 		"nutritionSummary": "Nutrition Summary",
 		"total": "Total",
 		"next": "Next"
 	},
 	"ingredients": {
-		"rice": {
-			"name": "Brown Rice",
-			"description": "Steamed brown rice container"
+		"bases": {
+			"riz": "Rice",
+			"borghol": "Bulgur",
+			"salade-lentilles": "Lentil Salad",
+			"salade-laitue": "Lettuce Salad",
+			"salade-crombe": "Crombe Salad"
 		},
-		"chickenBreast": {
-			"name": "Chicken Breast",
-			"description": "Grilled lean chicken breast"
+		"proteins": {
+			"escalope-poulet": "Chicken Escalope",
+			"crevette": "Shrimp",
+			"cuisses-poulet": "Chicken Thighs",
+			"2-oeufs": "2 Eggs",
+			"2-blancs-oeuf": "2 Egg Whites"
 		},
-		"crevette": {
-			"name": "Crevette",
-			"description": "Fresh grilled shrimp"
+		"extras": {
+			"amande": "Almond",
+			"sauce-sa7abox": "Sa7abox Sauce"
 		},
-		"salad": {
-			"name": "Mixed Salad",
-			"description": "Fresh mixed greens"
-		},
-		"harissaLight": {
-			"name": "Harissa Light",
-			"description": "Mild spicy harissa sauce"
-		},
-		"oliveOil": {
-			"name": "Olive Oil",
-			"description": "Extra virgin olive oil"
+		"nutrition": {
+			"riz": "210 kcal, 5g protein, 46g carbs, 0g fat",
+			"borghol": "240 kcal, 8g protein, 44g carbs, 1g fat",
+			"salade-lentilles": "180 kcal, 13g protein, 30g carbs, 0g fat",
+			"salade-laitue": "30 kcal, 2g protein, 6g carbs, 0g fat",
+			"salade-crombe": "55 kcal, 3g protein, 11g carbs, 0g fat",
+			"escalope-poulet": "175 kcal, 35g protein, 0g carbs, 3g fat",
+			"crevette": "105 kcal, 24g protein, 0g carbs, 1g fat",
+			"cuisses-poulet": "241 kcal, 40g protein, 11g carbs, 0g fat",
+			"2-oeufs": "150 kcal, 14g protein, 11g carbs, 11g fat",
+			"2-blancs-oeuf": "32 kcal, 8g protein, 0g carbs, 0g fat",
+			"amande": "280 kcal, 10g protein, 10g carbs, 25g fat",
+			"sauce-sa7abox": "60 kcal, 6g protein, 0g carbs, 4g fat"
 		}
 	},
 	"checkout": {
@@ -183,7 +245,7 @@
 		"name": {
 			"label": "Full Name",
 			"placeholder": "Enter your full name",
-			"description": "We'll use this to contact you"
+			"description": "We will use it to contact you"
 		},
 		"phone": {
 			"label": "Phone Number",
@@ -192,18 +254,18 @@
 		},
 		"location": {
 			"label": "Location",
-			"placeholder": "Enter your location or pickup address",
-			"description": "Gym pickup location or delivery address"
+			"placeholder": "Enter your address or pickup point",
+			"description": "In-gym pickup or delivery address"
 		},
 		"submit": "Place Order",
 		"submitting": "Submitting...",
-		"success": "Order submitted! We'll contact you soon.",
+		"success": "Order submitted! We will contact you soon.",
 		"error": "Failed to submit order. Please try again."
 	},
 	"pickup": {
 		"title": "Pickup Points",
-		"subtitle": "Available at {count} partner gyms.",
-		"openMap": "Open Map"
+		"subtitle": "Available in {count} partner gyms.",
+		"openMap": "View on Map"
 	},
 	"footer": {
 		"foundedIn": "Founded in Moknine, Monastir, 2025.",
