perf: minor chores

--- a/locale/en.json
+++ b/locale/en.json
@@ -112,8 +112,8 @@
 				"description": "100% fresh cold-pressed orange juice."
 			},
 			"orangeJuice": {
-				"name": "Protein Orange Juice",
-				"description": "Natural orange juice enriched with protein."
+				"name": "Protein Banana Juice",
+				"description": "Natural banana juice enriched with protein."
 			},
 			"bananaJuice": {
 				"name": "Banana Protein Smoothie",
