--- a/locale/fr.json
+++ b/locale/fr.json
@@ -148,6 +148,7 @@
 			"fiber": "Fiber"
 		},
 		"customize": {
+			"base": "Choisir une Base",
 			"extras": "Add Extras",
 			"sauce": "Choose a Sauce",
 			"notes": "Special Instructions",
